add comments, remove grid.css

--- a/css/fluid-grid.css
+++ b/css/fluid-grid.css
@@ -1,3 +1,12 @@
+/*------------------------------------------------------------------
+[Fluid Grid Stylesheet]
+
+Project:	 Front-end Template
+Version:	 1
+Assigned to: Alex
+Description: This stylesheet contains the fluid grid. 
+-------------------------------------------------------------------*/
+
 .container-fluid{	
 	margin-right: auto;
 	margin-left: auto;
