--- a/css/general.css
+++ b/css/general.css
@@ -1,8 +1,9 @@
-code {
-	padding: 2px 4px;
-	font-size: 90%;
-	color: #249E29;
-	background-color: #F9F2F4;
-	white-space: nowrap;
-	border-radius: 4px;
-}
+/*------------------------------------------------------------------
+[Master Stylesheet]
+
+Project:	 Front-end Template
+Version:	 1
+Last change: 17/03/14 [fixed Float bug]
+Assigned to: Alex
+Description: This stylesheet contains general css. 
+-------------------------------------------------------------------*/
