add comment, remove image, add fonts folder

--- a/css/fluid-grid.css
+++ b/css/fluid-grid.css
@@ -4,7 +4,7 @@
 Project:	 Front-end Template
 Version:	 1
 Assigned to: Alex
-Description: This stylesheet contains the fluid grid. 
+Description: Contains the fluid grid. 
 -------------------------------------------------------------------*/
 
 .container-fluid{	
