--- a/css/forms.css
+++ b/css/forms.css
@@ -1,9 +1,9 @@
 /*------------------------------------------------------------------
-[Master Stylesheet]
+[Forms Stylesheet]
 
 Project:	 Front-end Template
 Version:	 1
 Last change: 17/03/14 [fixed Float bug]
 Assigned to: Alex
-Description: This stylesheet contains css used in forms. 
+Description: Contains css used in forms. 
 -------------------------------------------------------------------*/
