--- a/css/general.css
+++ b/css/general.css
@@ -5,5 +5,5 @@ Project:	 Front-end Template
 Version:	 1
 Last change: 17/03/14 [fixed Float bug]
 Assigned to: Alex
-Description: This stylesheet contains general css. 
+Description: Contains general css. 
 -------------------------------------------------------------------*/
