--- a/css/ie.css
+++ b/css/ie.css
@@ -1,9 +1,9 @@
 /*------------------------------------------------------------------
-[Master Stylesheet]
+[IE Stylesheet]
 
 Project:	 Front-end Template
 Version:	 1
-Last change: 17/03/14 [fixed Float bug]
+Last change: 17/03/14
 Assigned to: Alex
-Description: This stylesheet contains css for IE6-8. 
+Description: Contains css for IE6-8. 
 -------------------------------------------------------------------*/
