--- a/css/layout.css
+++ b/css/layout.css
@@ -3,9 +3,9 @@
 
 Project:	 Front-end Template
 Version:	 1
-Last change: 17/03/14 [fixed Float bug]
+Last change: 17/03/14
 Assigned to: Alex
-Description: This stylesheet contains the css "skeleton".
+Description: Contains the css "skeleton".
 -------------------------------------------------------------------*/
 /*------------------------------------------------------------------
 [Table of contents]
